sorted by state name

--- a/lottery_hydra/templates/rdf/lottery:viewState/lottery:State.html
+++ b/lottery_hydra/templates/rdf/lottery:viewState/lottery:State.html
@@ -14,7 +14,7 @@ SELECT
    ?url schema:name ?state .
    ?url lottery:stateId ?key .
 }
-
+ORDER BY ?state
 {% endsparql %}
 
 <div class="lottery-state-picker-dropdown ui-dropdown ui-light" data-scrollbar="true">
